--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2021"
 
 [dependencies]
 winapi = {version = "0.3", features = ["winbase", "memoryapi", "processthreadsapi", "handleapi", "tlhelp32", "winuser", "errhandlingapi"] }
+
+[profile.release]
+opt-level = 'z'     # Optimize for size
+lto = true          # Enable link-time optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations
+panic = 'abort'     # Abort on panic
+strip = true
